2023-05-10 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Fixed some harmless warnings
	* [Engine] Misc fixes
	* [RendererSystem] Moved UploadCinematics code into Backend.
	* [RendererSystem] Moved showing all the images to the screen into Backend

2023-05-01 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Updated copyright year
	* [Cumulative Update] Misc changes	
	* [Engine] Uploaded missing files
	* [Linux] Fixed compiling on the Linux platform
	* [Misc] Updated copyright year
	* [Engine] Fixed obscure pid file bug
	* [Engine] Added file containing IP addresses allowed to execute RCON commands

2022-07-05 Dusan Jocic <dusanjocic@msn.com>
	* [SoundSystem] Added support for the "Effects Extension" (EAX)
	* [RenderSystem] Misc fixes
	* [Libraries] Updated OpenAL library
	* [Libraries] Uploaded missing files
	* [Server] Don't allow @@@ characters in the player name
	* [Server] Bugfix for sv_maxPing and sv_minPing connection issue
	* [Server] Show information about logging of the client only for the first time
	* [Server] Bugfix of message "Player all is not on the server"
	* [Server] Flood protection bugfix
	
2022-07-04 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Moved function messaging system to C++ file
	* [Cumulative Update] Misc changes
	* [Libraries] Cleaning
	* [Engine] Uploaded missing files
	* [Engine] Moved hash systems to C++ files
	* [Engine] Removed qcommon.hpp
	* [Linux] Fixed compiling on the Linux platform

2022-06-05 Dusan Jocic <dusanjocic@msn.com>
	* [Cumulative Update] Misc changes

2022-05-22 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Pause demo playback when menu open
	* [Client Demo] Don't timeout during demo pause
	* [Engine] Fix client defaulting to onboard graphics on laptops with discrete GPUs.
    * [Cumulative Update] Misc changes
	* [RenderSystem] Fixed shader stages using "wave" not being animated when the server time is a big number
	
2022-05-15 Dusan Jocic <dusanjocic@msn.com>